--- a/Croatian/main/Contacts.apk/res/values-hr/strings.xml
+++ b/Croatian/main/Contacts.apk/res/values-hr/strings.xml
@@ -29,6 +29,10 @@
   <string name="abc_toolbar_collapse_description">Sažmi</string>
   <string name="accessibility_calllog_detail">Pojedinosti povijesti poziva</string>
   <string name="accessibility_contact_detail">Pojedinosti o kontaktu</string>
+  <string name="accessibility_sliding_button_state_description_off">Isključeno</string>
+  <string name="accessibility_sliding_button_state_description_on">Uključeno</string>
+  <string name="accessibility_tab_state_description_unselect">Nije odabrano</string>
+  <string name="accessibility_tab_statedesc_unselect">Nije odabrano</string>
   <string name="account_container_title">Uvezeno iz</string>
   <string name="account_default">Lokalno</string>
   <string name="account_dual_sdn">SDN %s</string>
@@ -79,6 +83,7 @@
   <string name="bh_b">B</string>
   <string name="bh_back">Natrag</string>
   <string name="bh_bill_balance">Stanje</string>
+  <string name="bh_bill_balance_inquiry">Provjeri stanje - SIM %1$d</string>
   <string name="bh_bill_charge">Nadoplati bon</string>
   <string name="bh_bills_info_label">Detalji</string>
   <string name="bh_bugreport">Business feedback</string>
@@ -151,11 +156,13 @@
   <string name="bh_minute">m</string>
   <string name="bh_misim_recharge">Nadoplati</string>
   <string name="bh_mm">Mi Mobile</string>
+  <string name="bh_more_function">Dodatne značajke</string>
   <string name="bh_more_recommend">Više preporuka</string>
   <string name="bh_more_traffic_pkg">Više podatkovnih paketa</string>
   <string name="bh_more_value">Ostali iznos</string>
   <string name="bh_ms">Mi SIM</string>
   <string name="bh_net_error">Dogodila se mrežna pogreška</string>
+  <string name="bh_no_card">Nema SIM kartice</string>
   <string name="bh_no_permission_read_call_log_desc">Ovo dopuštenje omogućuje prikaz trajanja poziva</string>
   <string name="bh_no_permission_read_contact_desc">Ovo dopuštenje omogućuje pristup telefonskim brojevima u kontaktima</string>
   <string name="bh_no_sim">"SIM kartica nije umetnuta"</string>
@@ -790,6 +797,11 @@ Razlog: \"%s\""</string>
   <string name="missing_required_permission">Onemogućili ste potrebno dopuštenje.</string>
   <string name="miuix_access_state_desc">Odabrano</string>
   <string name="miuix_alphabet_indexer_name">Traka indeksa</string>
+  <string name="miuix_appcompat_accessibility_collapse_state">Sažeto</string>
+  <string name="miuix_appcompat_accessibility_expand_state">Prošireno</string>
+  <string name="miuix_appcompat_accessibility_finish_edit_action_mode">Izađi iz načina uređivanja</string>
+  <string name="miuix_appcompat_accessibility_new_message">Nova obavijest</string>
+  <string name="miuix_appcompat_accessibility_start_edit_action_mode">Uđi u način uređivanja</string>
   <string name="miuix_appcompat_action_mode_deselect_all">Poništi odabir</string>
   <string name="miuix_appcompat_action_mode_select_all">Odaberi sve</string>
   <string name="miuix_appcompat_action_mode_title_empty">Odaberi stavke</string>
@@ -810,13 +822,17 @@ Razlog: \"%s\""</string>
   <string name="miuix_appcompat_select_item">Odaberi stavke</string>
   <string name="miuix_appcompat_show_dialog_description">Skočni prozor</string>
   <string name="miuix_indexer_collect">Zbirke</string>
-  <string name="miuix_indexer_selected">Odabrano %s</string>
+  <string name="miuix_item_view_accessibility_unselected">Nije odabrano</string>
   <string name="miuix_item_view_role_description">Kartica</string>
   <string name="miuix_navigator_category_group_collapse">Sažmi</string>
+  <string name="miuix_navigator_category_group_collapsed">Sažeto</string>
   <string name="miuix_navigator_category_group_expand">Proširi</string>
+  <string name="miuix_navigator_category_group_expanded">Prošireno</string>
   <string name="miuix_navigator_content_switch_description">Prikaži bočnu traku</string>
   <string name="miuix_navigator_multiple_choice">Odaberi</string>
   <string name="miuix_navigator_navigator_switch_description">Sakrij bočnu traku</string>
+  <string name="miuix_navigator_toolbar_screen_bottom">Alatna traka na dnu zaslona</string>
+  <string name="miuix_progressbar_loading">Samo trenutak…</string>
   <string name="miuix_sbl_tracking_progress_labe_pull_to_refresh">Povuci za osvježiti</string>
   <string name="miuix_sbl_tracking_progress_labe_refreshed">Gotovo</string>
   <string name="miuix_sbl_tracking_progress_labe_refreshing">Osvježavanje</string>
@@ -825,6 +841,9 @@ Razlog: \"%s\""</string>
   <string name="miuix_sbl_tracking_progress_labe_up_none">"To je sve za sada"</string>
   <string name="miuix_sbl_tracking_progress_labe_up_refresh">Samo trenutak…</string>
   <string name="miuix_sbl_tracking_progress_labe_up_refresh_fail">"Ne mogu učitati stavke"</string>
+  <string name="miuix_show_password">Prikaži zaporku</string>
+  <string name="miuix_stretchablewidget_collapsed">Sažeto</string>
+  <string name="miuix_stretchablewidget_expanded">Prošireno</string>
   <string name="mobile_equipment_identification">Identifikacija mobilne opreme</string>
   <string name="monday">Ponedjeljak</string>
   <string name="monday_short">Pon</string>
