--- a/Croatian/main/MiMediaEditor.apk/res/values-hr/strings.xml
+++ b/Croatian/main/MiMediaEditor.apk/res/values-hr/strings.xml
@@ -117,8 +117,11 @@ za podešavanje područja disperzije"</string>
   <string name="adjust_tab_noise">Buka</string>
   <string name="adjust_tab_tone">Ton</string>
   <string name="adjust_tab_white_balance">Balans bijele boje</string>
+  <string name="adjust_talkback_blue_curve">Plava krivulja</string>
   <string name="adjust_talkback_curve_anchor_delete">Brisanje sidrišne točke</string>
   <string name="adjust_talkback_curve_reset">Poništi</string>
+  <string name="adjust_talkback_green_curve">Zelena krivulja</string>
+  <string name="adjust_talkback_red_curve">Crvena krivulja</string>
   <string name="adjust_tiunt">Tint</string>
   <string name="adjust_vignette">Vignette</string>
   <string name="adjust_whites">Raspon svjetla</string>
@@ -144,6 +147,7 @@ za podešavanje područja disperzije"</string>
   <string name="ai_action_toast_function_photo_auto_beautify_processing">Uljepšavanje…</string>
   <string name="ai_action_toast_function_photo_beautify_skin_processing">Prilagodba tona kože…</string>
   <string name="ai_action_toast_function_photo_body_beauty_processing">Uređivanje tijela…</string>
+  <string name="ai_action_toast_function_photo_eliminate_processing">Uklanjanje refleksije…</string>
   <string name="ai_action_toast_function_photo_enhance_processing">Poboljšavanje…</string>
   <string name="ai_action_toast_function_photo_filter_processing">Primjena filtra…</string>
   <string name="ai_action_toast_function_photo_restoration_processing">Vraćanje slike…</string>
@@ -160,6 +164,18 @@ za podešavanje područja disperzije"</string>
   <string name="ai_action_toast_picture_size_out_of_limit">"Slike ove veličine nisu podržane. Pokušajte s drugom."</string>
   <string name="ai_action_toast_poor_network">"Nije moguće spojiti se na mrežu. Provjerite mrežne postavke i pokušajte ponovo."</string>
   <string name="ai_action_toast_request_time_out">Zahtjev je istekao. Pričekajte minutu ili dvije i pokušajte ponovno.</string>
+  <string name="ai_emote_loading_title">Generiranje izraza…</string>
+  <string name="ai_emote_notice_desc">"Koristite umjetnu inteligenciju da promijenite izraze ljudi na fotografijama.
+Za najbolje rezultate koristite ovu značajku na jasnim fotografijama okrenutim prema naprijed."</string>
+  <string name="ai_emote_process_max_limited">"Promijeni do %d izraza lica"</string>
+  <string name="ai_emote_talkback_emote_0">Izvorni izraz</string>
+  <string name="ai_emote_talkback_emote_1">Mali osmijeh</string>
+  <string name="ai_emote_talkback_emote_2">Neutralni izraz</string>
+  <string name="ai_emote_talkback_emote_3">Nasmiješen zubima</string>
+  <string name="ai_emote_talkback_emote_4">Smijeh</string>
+  <string name="ai_emote_talkback_emote_5">Tužan izraz lica</string>
+  <string name="ai_emote_talkback_emote_livephoto">Preporučeni izraz %d</string>
+  <string name="ai_emote_talkback_face">Odabrana osoba %d</string>
   <string name="aigc_login_confirm">Prijavite se</string>
   <string name="aigc_login_hint_message">Prijavite se s Xiaomi računom kako biste mogli koristiti sve značajke AI Editora.</string>
   <string name="aigc_login_hint_title">Prijavite se</string>
@@ -465,6 +481,11 @@ za podešavanje područja disperzije"</string>
   <string name="collage_title_layout">Raspored</string>
   <string name="collage_title_poster">Poster</string>
   <string name="collage_title_stitching">Filmska rola</string>
+  <string name="collage_video_export_image">Fotografija</string>
+  <string name="collage_video_export_livephoto">Dinamične snimke</string>
+  <string name="collage_video_export_video">Videozapis</string>
+  <string name="collage_video_title">Uredi</string>
+  <string name="collage_video_video_time_limit">Podržani su videozapisi do %d sekundi</string>
   <string name="color_baby_blue">Svijetloplava</string>
   <string name="color_black">Crna</string>
   <string name="color_blue">Plava</string>
@@ -516,6 +537,9 @@ za podešavanje područja disperzije"</string>
   <string name="common_signin_button_text_long">Prijava s Googleom</string>
   <string name="confirm_cancel_task_files">Otkazati slanje datoteka na %1$s?</string>
   <string name="confirm_cancel_task_images">Otkazati slanje slika na %1$s?</string>
+  <string name="convert_livephoto_title">Pretvori u dinamičnu snimku</string>
+  <string name="convert_livephoto_video_not_support">"Nije moguće pretvoriti ovaj videozapis u dinamičnu snimku"</string>
+  <string name="convert_livephoto_video_time_limit">Samo videozapisi do %d sekundi mogu se pretvoriti u dinamičke snimke</string>
   <string name="copy">Kopiraj</string>
   <string name="crop_label">Obrezane fotografije</string>
   <string name="cta_agreement_declare">&lt;Data&gt;Kako biste u potpunosti razumjeli vaša prava kao korisnika kao i načine na koje koristimo vaše podatke, pročitajte i prihvatite naše &amp;lt;a href=\"%1$s\"&amp;gt;Korisnički ugovor&amp;lt;/a&amp;gt; i &amp;lt;a href=\"%2$s\"&amp;gt;Pravila o privatnosti&amp;lt;/a&amp;gt; prije korištenja ove aplikacije.&lt;/Data&gt;</string>
@@ -574,6 +598,9 @@ za podešavanje područja disperzije"</string>
   <string name="file_cannot_print">"Ne mogu ispisati ovu stavku."</string>
   <string name="file_cannot_screen_throw">"Ne mogu emitirati ovu stavku."</string>
   <string name="file_sending">Slanje datoteka…</string>
+  <string name="filter_ambience_black_mist">Tamna magla</string>
+  <string name="filter_ambience_white_mist">Bijela magla</string>
+  <string name="filter_category_ambience">Atmosfera</string>
   <string name="filter_category_black_white">B&amp;W</string>
   <string name="filter_category_classic">Klasika</string>
   <string name="filter_category_diy">Prilagođeno</string>
@@ -817,6 +844,7 @@ za podešavanje područja disperzije"</string>
   <string name="frame_color_selector_talkback_hide">Sakrij birač boja</string>
   <string name="frame_color_selector_talkback_show">Prikaži birač boja</string>
   <string name="frame_not_support_image_ratio">"Ovaj omjer nije podržan"</string>
+  <string name="frame_talkback_size">Veličina okvira</string>
   <string name="free_view_desc">3D prikaz</string>
   <string name="friday">Petak</string>
   <string name="friday_short">Pet</string>
@@ -1087,7 +1115,9 @@ za podešavanje područja disperzije"</string>
   <string name="motion_photo_audio_off">Audio isključen</string>
   <string name="motion_photo_audio_on">Audio uključen</string>
   <string name="motion_photo_cancel">Odustani</string>
-  <string name="motion_photo_re_pick_title">Fotografija uživo</string>
+  <string name="motion_photo_decode_failed">"Ne mogu promijeniti naslovnicu za ovu dinamičnu snimku"</string>
+  <string name="motion_photo_export_gif_limit">"Nije moguće izraditi GIF-ove iz videozapisa duljih od %d sekundi"</string>
+  <string name="motion_photo_re_pick_title">Dinamične snimke</string>
   <string name="motion_photo_save_fail">"Nije moguće spremiti"</string>
   <string name="motion_photo_save_gif">Spremi kao GIF</string>
   <string name="motion_photo_save_gif_ing">Spremanje GIF-a…</string>
@@ -1104,6 +1134,7 @@ za podešavanje područja disperzije"</string>
   <string name="motion_photo_video_reverse_effect">Obrnuto</string>
   <string name="motion_photo_video_reverse_ing">Okretanje videozapisa…</string>
   <string name="motion_photo_video_reverse_on">Obrnuto</string>
+  <string name="motion_photo_video_transcode_ing">Transkodiranje videozapisa…</string>
   <string name="motion_photo_watermark_off">Vodena oznaka je isključena</string>
   <string name="motion_photo_watermark_on">Vodena oznaka je uključena</string>
   <string name="movie_add_disable">Možete odabrati do %d fotografija</string>
@@ -1135,6 +1166,8 @@ za podešavanje područja disperzije"</string>
   <string name="movie_edit">Uredi</string>
   <string name="movie_edit_photo">Fotografija</string>
   <string name="movie_full_screen">Cijeli zaslon</string>
+  <string name="movie_exit_full_screen_play">Izađi preko cijelog zaslona</string>
+  <string name="movie_full_screen_play">Gledajte na cijelom zaslonu</string>
   <string name="movie_item_name">Isječak</string>
   <string name="movie_preview_btn">Pregled</string>
   <string name="movie_preview_share_title">Podijeli</string>
@@ -1266,6 +1299,7 @@ za podešavanje područja disperzije"</string>
   <string name="photo_editor_ai_beautify_process_error">"Nije moguće uljepšati. Pokušajte ponovno."</string>
   <string name="photo_editor_ai_beautify_user_guide_desc">"Inteligentno identificirajte značajke slike i optimizirajte tonove i boje
 Poboljšajte svoju fotografiju jednim dodirom"</string>
+  <string name="photo_editor_ai_emote">Promijeni izraz</string>
   <string name="photo_editor_aicr_generation_failed">"Nije moguće generirati. Pokušajte ponovno."</string>
   <string name="photo_editor_aicr_high_temperature">Uređaj je prevruć. Pričekajte da se ohladi i pokušajte ponovno.</string>
   <string name="photo_editor_aicr_inpaint_invalid_image">"Ne mogu koristiti značajke gumice za ovu fotografiju. Pokušajte s drugom."</string>
@@ -1552,6 +1586,7 @@ Dodirnite Pro za korištenje."</string>
   <string name="saturday_short">Sub</string>
   <string name="saturday_shortest">S</string>
   <string name="save_error_try_a_different_template_msg">"Nije moguće spremiti. Slika je prevelika."</string>
+  <string name="scale_support_toast">Možete primicati prste da biste povećali i smanjili video zapise</string>
   <string name="scanning_device_tips">Traženje uređaja u blizini… Provjerite nalazi li se drugi uređaj u načinu otkrivanja.</string>
   <string name="screen_doodle_talkback_size">Doodle širina crte</string>
   <string name="screen_editor_btn_delete">Izbriši</string>
@@ -1684,6 +1719,7 @@ Dodirnite Pro za korištenje."</string>
   <string name="sunday">Nedjelja</string>
   <string name="sunday_short">Ned</string>
   <string name="sunday_shortest">N</string>
+  <string name="talkback_clip_seek_bar">Vremenska traka video isječka</string>
   <string name="talkback_signature_delete">Izbriši ovaj potpis</string>
   <string name="talkback_signature_select_color_1">Crna</string>
   <string name="talkback_signature_select_color_2">Crvena</string>
@@ -2310,6 +2346,7 @@ Prenesite fotografije s jasnim crtama lica za najbolje rezultate."</string>
   <string name="vlog_talkback_max_voice_view">Najveća glasnoća</string>
   <string name="vlog_talkback_min_voice_view">Najniža glasnoća</string>
   <string name="vlog_talkback_pro">Pro</string>
+  <string name="vlog_talkback_process_bar">Traka za traženje videa</string>
   <string name="vlog_talkback_ratio_16_9">Šesnaest puta devet</string>
   <string name="vlog_talkback_ratio_1_1">Kvadrat</string>
   <string name="vlog_talkback_ratio_255_1">Dva zarez pedeset pet prema jedan</string>
@@ -2344,6 +2381,7 @@ Prenesite fotografije s jasnim crtama lica za najbolje rezultate."</string>
   <string name="vlog_talkback_text_travel_day">Adventure</string>
   <string name="vlog_talkback_text_travel_vlog">Dnevnik putovanja</string>
   <string name="vlog_talkback_text_vlog">Sretan dan</string>
+  <string name="vlog_talkback_video_clip">Video isječak</string>
   <string name="vlog_talkback_view_pause">Pauza</string>
   <string name="vlog_talkback_view_play">Reproduciraj</string>
   <string name="vlog_template_apply">Koristi predložak</string>
