--- a/Croatian/main/MiShare.apk/res/values-hr/strings.xml
+++ b/Croatian/main/MiShare.apk/res/values-hr/strings.xml
@@ -27,6 +27,10 @@
   <string name="abc_shareactionprovider_share_with">Dijeljenje sa</string>
   <string name="abc_shareactionprovider_share_with_application">Dijeli putem aplikacije %s</string>
   <string name="abc_toolbar_collapse_description">Sažmi</string>
+   <string name="accessibility_sliding_button_state_description_off">Isključeno</string>
+  <string name="accessibility_sliding_button_state_description_on">Uključeno</string>
+  <string name="accessibility_tab_state_description_unselect">Nije odabrano</string>
+  <string name="accessibility_tab_statedesc_unselect">Nije odabrano</string>
   <string name="actionbar_button_up_description">Natrag</string>
   <string name="agree_desc">Dodijelite gore navedena obavezna dopuštenja.</string>
   <string name="app_name">Xiaomi Share</string>
@@ -146,6 +150,9 @@
   <string name="global_my">"Moj uređaj
   %1$s"</string>
   <string name="go_to_settings">Postavke</string>
+  <string name="guide_page_view1">Uključite Xiaomi Share na oba uređaja. Druga osoba može dodirnuti prečac u Kontrolnom centru. Stranica %1$d od %2$d. Prijeđite lijevo ili desno s dva prsta za promjenu.</string>
+  <string name="guide_page_view1_lyra">Možete uključiti Xiaomi Share u Kontrolnom centru. Stranica: %1$d od %2$d. Prijeđite lijevo ili desno s dva prsta za promjenu.</string>
+  <string name="guide_page_view2">"Odaberite uređaj na koji želite poslati stavke i dodirnite njegovu ikonu. Stranica: %1$d od %2$d. Prijeđite lijevo ili desno s dva prsta za promjenu."</string>
   <string name="guide_summary_1">Druga osoba može dodirnuti prečac u Panelu obavijesti</string>
   <string name="guide_summary_1_lyra">Možete uključiti Xiaomi Share u kontrolnom centru</string>
   <string name="guide_summary_2">"Odaberite uređaj na koji želite poslati stavke i dodirnite njegovu ikonu"</string>
@@ -191,6 +198,11 @@ Android uređaji drugih proizvođača: vivo, realme, OPPO, Black Shark, Meizu, O
   <string name="mishare_transefer_channel_desc">Obavijesti o stavkama koje je Xiaomi Share poslao i primio</string>
   <string name="miuix_access_state_desc">Odabrano</string>
   <string name="miuix_alphabet_indexer_name">Traka indeksa</string>
+  <string name="miuix_appcompat_accessibility_collapse_state">Sažeto</string>
+  <string name="miuix_appcompat_accessibility_expand_state">Prošireno</string>
+  <string name="miuix_appcompat_accessibility_finish_edit_action_mode">Izađi iz načina uređivanja</string>
+  <string name="miuix_appcompat_accessibility_new_message">Nova obavijest</string>
+  <string name="miuix_appcompat_accessibility_start_edit_action_mode">Uđi u način uređivanja</string>
   <string name="miuix_appcompat_action_mode_deselect_all">Poništi odabir</string>
   <string name="miuix_appcompat_action_mode_select_all">Odaberi sve</string>
   <string name="miuix_appcompat_action_mode_title_empty">Odaberi stavke</string>
@@ -207,7 +219,7 @@ Android uređaji drugih proizvođača: vivo, realme, OPPO, Black Shark, Meizu, O
   <string name="miuix_appcompat_select_all_description">Odaberi sve</string>
   <string name="miuix_appcompat_select_item">Odaberi stavke</string>
   <string name="miuix_indexer_collect">Zbirke</string>
-  <string name="miuix_indexer_selected">Odabrano %s</string>
+  <string name="miuix_progressbar_loading">Samo trenutak…</string>
   <string name="miuix_sbl_tracking_progress_labe_pull_to_refresh">Povuci za osvježiti</string>
   <string name="miuix_sbl_tracking_progress_labe_refreshed">Gotovo</string>
   <string name="miuix_sbl_tracking_progress_labe_refreshing">Osvježavanje</string>
@@ -216,6 +228,9 @@ Android uređaji drugih proizvođača: vivo, realme, OPPO, Black Shark, Meizu, O
   <string name="miuix_sbl_tracking_progress_labe_up_none">"To je sve za sada"</string>
   <string name="miuix_sbl_tracking_progress_labe_up_refresh">Samo trenutak…</string>
   <string name="miuix_sbl_tracking_progress_labe_up_refresh_fail">"Ne mogu učitati stavke"</string>
+  <string name="miuix_show_password">Prikaži zaporku</string>
+  <string name="miuix_stretchablewidget_collapsed">Sažeto</string>
+  <string name="miuix_stretchablewidget_expanded">Prošireno</string>
   <string name="monday">Ponedjeljak</string>
   <string name="monday_short">Pon</string>
   <string name="monday_shortest">P</string>
