--- a/Croatian/main/MiuiAod.apk/res/values-hr/strings.xml
+++ b/Croatian/main/MiuiAod.apk/res/values-hr/strings.xml
@@ -187,6 +187,12 @@ dd.MM."</string>
   <string name="keyguard_shortcut_tab_left">Lijevo</string>
   <string name="keyguard_shortcut_tab_right">Desno</string>
   <string name="keyguard_shortcut_title">Prečaci</string>
+  <string name="keyguard_shortcut_empty">Ništa</string>
+  <string name="keyguard_shortcut_open_failed">"Nije moguće pokrenuti aplikaciju. Pokušajte ponovno."</string>
+  <string name="keyguard_shortcut_slide_enter">Povucite za otvaranje</string>
+  <string name="keyguard_shortcut_tab_left">Lijevo</string>
+  <string name="keyguard_shortcut_tab_right">Desno</string>
+  <string name="keyguard_shortcut_title">Prečaci</string>
   <string name="kg_activity_label">Uređivanje zaključanog zaslona</string>
   <string name="kg_aod_settings_depth_video_toast">Samo prilagođeni Always-on zaslon podržan je kada se koristi efekt dubine</string>
   <string name="kg_apply">Primjeni</string>
@@ -507,7 +513,7 @@ mm"</string>
   <string name="miuix_alphabet_indexer_name">Traka indeksa</string>
   <string name="miuix_appcompat_accessibility_finish_edit_action_mode">Izađi iz načina uređivanja</string>
   <string name="miuix_appcompat_accessibility_new_message">Nova poruka</string>
-  <string name="miuix_appcompat_accessibility_start_edit_action_mode">Pokreni način rada za uređivanje</string>
+  <string name="miuix_appcompat_accessibility_start_edit_action_mode">Uđi u način uređivanja</string>
   <string name="miuix_appcompat_action_mode_deselect_all">Poništi odabir</string>
   <string name="miuix_appcompat_action_mode_select_all">Odaberi sve</string>
   <string name="miuix_appcompat_action_mode_title_empty">Odaberi stavke</string>
@@ -524,11 +530,11 @@ mm"</string>
   <string name="miuix_appcompat_select_all_description">Odaberi sve</string>
   <string name="miuix_appcompat_select_item">Odaberi stavke</string>
   <string name="miuix_appcompat_show_dialog_description">Skočni prozor</string>
-  <string name="miuix_bottom_sheet_accessibility_scroll_down_to_close">Prevucite prema dolje za zatvaranje</string>
-  <string name="miuix_bottom_sheet_accessibility_scroll_down_to_half_screen">Prevucite prstom prema dolje za prebacivanje na pola zaslona</string>
-  <string name="miuix_bottom_sheet_accessibility_scroll_down_to_minimized">Prevucite prema dolje za minimiziranje</string>
-  <string name="miuix_bottom_sheet_accessibility_scroll_up_to_half_screen">Prevucite prstom prema gore za prebacivanje na pola zaslona</string>
-  <string name="miuix_bottom_sheet_accessibility_scroll_up_to_maximized">Prevucite prstom prema gore za maksimiziranje</string>
+  <string name="miuix_bottom_sheet_accessibility_scroll_down_to_close">Povucite prema dolje za zatvaranje</string>
+  <string name="miuix_bottom_sheet_accessibility_scroll_down_to_half_screen">Povucite prstom prema dolje za prebacivanje na pola zaslona</string>
+  <string name="miuix_bottom_sheet_accessibility_scroll_down_to_minimized">Povucite prema dolje za minimiziranje</string>
+  <string name="miuix_bottom_sheet_accessibility_scroll_up_to_half_screen">Povucite prstom prema gore za prebacivanje na pola zaslona</string>
+  <string name="miuix_bottom_sheet_accessibility_scroll_up_to_maximized">Povucite prstom prema gore za maksimiziranje</string>
   <string name="miuix_bottom_sheet_accessibility_state_half_screen">Pola zaslona</string>
   <string name="miuix_bottom_sheet_accessibility_state_maximized">Maksimizirano</string>
   <string name="miuix_bottom_sheet_accessibility_state_minimized">Minimizirano</string>
@@ -548,7 +554,7 @@ mm"</string>
   <string name="miuix_sbl_tracking_progress_labe_up_refresh">Samo trenutak…</string>
   <string name="miuix_sbl_tracking_progress_labe_up_refresh_fail">"Ne mogu učitati stavke"</string>
   <string name="miuix_show_password">Prikaži zaporku</string>
-  <string name="miuix_stretchablewidget_collapsed">Zatvoreno</string>
+  <string name="miuix_stretchablewidget_collapsed">Sažeto</string>
   <string name="miuix_stretchablewidget_expanded">Prošireno</string>
   <string name="modify_scheduled_time">Promjeni vrijeme</string>
   <string name="monday">Ponedjeljak</string>
