--- a/Croatian/main/MiuiHome.apk/res/values-hr/strings.xml
+++ b/Croatian/main/MiuiHome.apk/res/values-hr/strings.xml
@@ -540,7 +540,8 @@ Poboljšana sigurnost."</string>
   <string name="maml_download_dialog_cancel_text_china">Pričekajte Wi-Fi</string>
   <string name="maml_download_dialog_checkbox_text">"Ne prikazuj ponovo za %d min."</string>
   <string name="maml_download_dialog_confirm_text">Preuzmi</string>
-  <string name="maml_download_dialog_message">Za preuzimanje ove stavke koristit će se %s MB mobilnih podataka. Svejedno preuzeti?</string>
+  <string name="maml_download_dialog_message_kb">Preuzimanje ovog widgeta potrošit će %1$d KB mob. podataka. Preuzeti sada?</string>
+  <string name="maml_download_dialog_message_mb">Preuzimanje ovog widgeta potrošit će %1$d MB mob. podataka. Preuzeti sada?</string>
   <string name="maml_download_dialog_title">Upozorenje o upotrebi podataka</string>
   <string name="maml_download_tip_wait_wifi">Ova će se stavka preuzeti kad se povežete na Wi-Fi</string>
   <string name="maml_download_tip_wait_wifi_china">Ova će se stavka preuzeti kad se povežete na Wi-Fi</string>
@@ -597,7 +598,9 @@ Poboljšana sigurnost."</string>
   <string name="miui_widget_toast_for_not_support_by_pa">"Zaklj. aplikacija ne podržava widgete ove veličine"</string>
   <string name="miuix_access_state_desc">Odabrano</string>
   <string name="miuix_accessibility_title">Naslov</string>
-  <string name="miuix_alphabet_indexer_name">Indeksna traka</string>
+  <string name="miuix_alphabet_indexer_name">Traka indeksa</string>
+  <string name="miuix_appcompat_accessibility_collapse_state">Sažeto</string>
+  <string name="miuix_appcompat_accessibility_expand_state">Prošireno</string>
   <string name="miuix_appcompat_accessibility_finish_edit_action_mode">Izađi iz načina uređivanja</string>
   <string name="miuix_appcompat_accessibility_new_message">Nova obavijest</string>
   <string name="miuix_appcompat_accessibility_start_edit_action_mode">Uđi u način uređivanja</string>
